IGNITE-15771 Sort out and merge Calcite tickets to Ignite 3.0 (#433)
* IGNITE-14807 Calcite. Eliminate usage of deprecated api within Ignite rels and rules
* IGNITE-14594 Calcite integration. UnionPlannerTest is not included to any test suite
* IGNITE-14589 Calcite engine. Numerous problem with type Decimal
* IGNITE-13159 Decorrelator support SOME and ALL operator.
* IGNITE-15127 Calcite. Investigate CoreRules.JOIN_COMMUTE[_OUTER] usage.
* IGNITE-15031 Support for REPLACE function
* IGNITE-14816 Change TreeMap in sorted IndexSpoolNode to ArrayList
* IGNITE-13136 Improve join predicate comparison
* IGNITE-15203 Calcite. Extract Filter and Project related rules to separate HEP phase
* IGNITE-15002 Fix functions fail on NULL constant
* IGNITE-14749 Fix multiline DDL and DML statements don't work
* IGNITE-14597 ANY_VALUE aggregate
* IGNITE-14954 Fix MONTHNAME, DAYNAME functions fail
* IGNITE-14973 Fix IgniteLimit issues (rels ordering with IgniteExchange and IgniteSort, rows estimation)
* IGNITE-14808 Calcite. RIGHT|FULL Join operations are lost nulls sort ordering.
* IGNITE-14593 Support bang-equal operator